Problem exporting OGG Theora-Vorbis video (and other audio codecs) #27978

Closed
opened 2011-07-15 10:21:47 +02:00 by chaos · 12 comments
Member

%%%Blender crashes when exporting a video that uses the Theora video codec and Vorbis audio codec.
This is applicable for example when creating a video sequence with audio in the VSE.

Blender can manage the Theora export without problems when using a lossless audio codec like FLAC, but when using others like MP3, Vorbis, AAC or PCM, it crashes.
I made several tests to make sure that the problem isn't the manual configuration, at regular rates and normal values.

This is the procedure I taken in the main test:

  1. Added some images strips.
  2. Added one MP3 audio input (First test).
  3. Selected Xvid in the Output panel
  4. Selected OGG as video container
  5. Selected Theora as Video Codec.
  6. Video Bit-rate at 9000.
  7. GOP Size: 3 images (1: I image, 2: P image, 3: I image)
  8. Video Rate: As default. Max Rate set at 14000
  9. Selected Vorbis as Audio Codec.
  10. Bit-rate at 192 (First test), 45 (Second test)
  11. Other audio values as default.

The result is an inmediate crash when pressing the "Animation" button.
Other tests included import a Vorbis audio, so Blender doesn't have to convert, but the result was the same: crash.
Tried other formats like AAC or PCM: crash. Only FLAC worked for me.
Some audio codecs reports messages in the Properties Bar: Error initializing audio stream.
Theora in itself doesn't have any problems. The bug appears when mixing with audio.

System:
Linux Mint 11
RAM: 4GB
Quad-core: AMD 3.2Ghz
Video: Nvidia 240GT
Using up-to-date build from PPA ppa:cheleb/blender-svn
Not using the own compiled version because of other problems during compilation.
All blender dependencies installed, as shown in the page "Building Blender with Scons on Linux".%%%

%%%Blender crashes when exporting a video that uses the Theora video codec and Vorbis audio codec. This is applicable for example when creating a video sequence with audio in the VSE. Blender can manage the Theora export without problems when using a lossless audio codec like FLAC, but when using others like MP3, Vorbis, AAC or PCM, it crashes. I made several tests to make sure that the problem isn't the manual configuration, at regular rates and normal values. This is the procedure I taken in the main test: 1) Added some images strips. 2) Added one MP3 audio input (First test). 3) Selected Xvid in the Output panel 4) Selected OGG as video container 5) Selected Theora as Video Codec. 6) Video Bit-rate at 9000. 7) GOP Size: 3 images (1: I image, 2: P image, 3: I image) 8) Video Rate: As default. Max Rate set at 14000 9) Selected Vorbis as Audio Codec. 10) Bit-rate at 192 (First test), 45 (Second test) 11) Other audio values as default. The result is an inmediate crash when pressing the "Animation" button. Other tests included import a Vorbis audio, so Blender doesn't have to convert, but the result was the same: crash. Tried other formats like AAC or PCM: crash. Only FLAC worked for me. Some audio codecs reports messages in the Properties Bar: Error initializing audio stream. Theora in itself doesn't have any problems. The bug appears when mixing with audio. System: Linux Mint 11 RAM: 4GB Quad-core: AMD 3.2Ghz Video: Nvidia 240GT Using up-to-date build from PPA ppa:cheleb/blender-svn Not using the own compiled version because of other problems during compilation. All blender dependencies installed, as shown in the page "Building Blender with Scons on Linux".%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%For a proper reference, I would really insist on always testing the officially binary from blender.org too.
Then add a .blend example with the files (just keep them small, under 5 MB). That works much better and more reliable than long recipes. :)%%%

%%%For a proper reference, I would really insist on always testing the officially binary from blender.org too. Then add a .blend example with the files (just keep them small, under 5 MB). That works much better and more reliable than long recipes. :)%%%
Author
Member

%%%yep. the problem is the same with the official build from blender.org.
I'm trying to compile the SVN to do more tests, but I'm still getting errors. I ask, could I post a file bigger than 5MB on Dropbox and make it available to you through it? I'm asking, just in any case.%%%

%%%yep. the problem is the same with the official build from blender.org. I'm trying to compile the SVN to do more tests, but I'm still getting errors. I ask, could I post a file bigger than 5MB on Dropbox and make it available to you through it? I'm asking, just in any case.%%%
Member

%%%The .blend file and a small mp3 would be easy to keep below 5 MB :)
If not possible, dropbox is fine too.

You could also test whether audio playback itself works. %%%

%%%The .blend file and a small mp3 would be easy to keep below 5 MB :) If not possible, dropbox is fine too. You could also test whether audio playback itself works. %%%
Author
Member

%%%Ok, I finally compiled the SVN through Cmake and enabled FFMPEG to do the tests. The result is the same. A crash, so there's a problem here. I'm just a regular user, not a developer, so I can't say too much about this problem.

I'll prepare an example blend and upload it today if possible.%%%

%%%Ok, I finally compiled the SVN through Cmake and enabled FFMPEG to do the tests. The result is the same. A crash, so there's a problem here. I'm just a regular user, not a developer, so I can't say too much about this problem. I'll prepare an example blend and upload it today if possible.%%%
Author
Member

%%%Ok. I uploaded the file on Dropbox. I don't have too much time to make a new file fitting 5MB. Here's the file: http://dl.dropbox.com/u/8709880/Test.7z
The file includes all sequencer's images into the folder, because they can't be packed within the blend. The sound input in this case is an MP3, so, when you want to make "Animation", it crashes inmediately. Trying with Vorbis gives the same result.

I hope this helps the diagnosis.%%%

%%%Ok. I uploaded the file on Dropbox. I don't have too much time to make a new file fitting 5MB. Here's the file: http://dl.dropbox.com/u/8709880/Test.7z The file includes all sequencer's images into the folder, because they can't be packed within the blend. The sound input in this case is an MP3, so, when you want to make "Animation", it crashes inmediately. Trying with Vorbis gives the same result. I hope this helps the diagnosis.%%%

%%%I ran into similar problem. in my case, I'm using Blender 2.59. I added some video, and when I tried to convert it to ogg theora it would crash immediately. I am not doing audio at all. If I pick "none" for audio, it crashes. It was successful when I chose "FLAC" for audio. I'm running Fedora 15 with ffmpeg version: ffmpeg-0.7-0.3.20110612git.fc15.i686.

Please let me know if you need anymore information from me.%%%

%%%I ran into similar problem. in my case, I'm using Blender 2.59. I added some video, and when I tried to convert it to ogg theora it would crash immediately. I am not doing audio at all. If I pick "none" for audio, it crashes. It was successful when I chose "FLAC" for audio. I'm running Fedora 15 with ffmpeg version: ffmpeg-0.7-0.3.20110612git.fc15.i686. Please let me know if you need anymore information from me.%%%

%%%hi, i have the same problem on r39307 on Win32.

The attached blend crashes when trying to render an animation.
When switching RenderSettings.file_format to H.264 and RenderSetting.ffmpeg_audio_code to MP3 everything works fine.

%%%

%%%hi, i have the same problem on r39307 on Win32. The attached blend crashes when trying to render an animation. When switching RenderSettings.file_format to H.264 and RenderSetting.ffmpeg_audio_code to MP3 everything works fine. %%%

%%%Is it still issue with very recent build from http://builder.blender.org/download/ ?%%%

%%%Is it still issue with very recent build from http://builder.blender.org/download/ ?%%%
Author
Member

%%%yep. I'm still getting this crash with those builds.%%%

%%%yep. I'm still getting this crash with those builds.%%%

%%%Fixed in svn rev 40785. In fact, there were two problems:

  • Ogg format supports only vorbis, theora, speex and flac audio codecs. Now you'll see message about unsupported configuration when try to render.
  • Vorbis encoder used to crash with floating point exception. Made some investigation of FFmpeg samples and FFmpeg itself and fixed it with initializing audio_stream->codec->time_base with the same value as it's done in FFmpeg. Made some tests and they worked fine, but more tests are needed.

Thanks for the report, closing now.%%%

%%%Fixed in svn rev 40785. In fact, there were two problems: - Ogg format supports only vorbis, theora, speex and flac audio codecs. Now you'll see message about unsupported configuration when try to render. - Vorbis encoder used to crash with floating point exception. Made some investigation of FFmpeg samples and FFmpeg itself and fixed it with initializing audio_stream->codec->time_base with the same value as it's done in FFmpeg. Made some tests and they worked fine, but more tests are needed. Thanks for the report, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27978
No description provided.