Partial fix #27978: Problem exporting OGG Theora-Vorbis video (and other audio codecs)

Ogg format does support only vorbis, theora, speex and flac audio codecs.
Added check for result of av_write_header() and show info in header about
error while initializing streams.

This commit also fixed crash when using vorbis audio format.
It used to be floating point exception. SOlved by initializing
audio_stream->codec->time_base with proper rational value as it's
done in FFmpeg sources.